--- a/www/public/ressources/styles/main.css
+++ b/www/public/ressources/styles/main.css
@@ -899,20 +899,18 @@ input[type=text].invisibleInput-blue {
 
 /* Etiquettes d'environnements */
 .env, .last-env, .env-fit, .last-env-fit {
-    font-size: 12px;
+    font-size: 13px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 3px;
     padding-bottom: 3px;
     vertical-align: middle;
     border-radius: 2px;
-    box-shadow:
-    0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
-    0px 2px 2px 0px rgba(109, 109, 109, 0.2);
+    box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 50%) inset, 0px 2px 2px 0px rgb(109 109 109 / 20%);
 }
 .env, .env-fit {
-    color: black;
     background-color: whitesmoke;
+    color: #3e3d3d;
 }
 .env-fit, .last-env-fit {
     text-align: center;
@@ -922,16 +920,24 @@ input[type=text].invisibleInput-blue {
     color: whitesmoke;
     background-color: #d9534f;
 }
-.label-black {
+.label-black, .label-white {
     font-size: 13px;
-    background-color: #242424;
     vertical-align: baseline;
+    display: inline-block;
     padding-left: 6px;
     padding-right: 6px;
     padding-top: 3px;
     padding-bottom: 3px;
     border-radius: 2px;
     box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 50%) inset, 0px 2px 2px 0px rgb(109 109 109 / 20%);
+}
+.label-black {
+    background-color: #242424;
+    color: whitesmoke;
+}
+.label-white {
+    background-color: whitesmoke;
+    color: #3e3d3d;
 }
 
 textarea {
